🎨 每次聊天自动保存当前会话 #3

--- a/public/i18n/en_US.json
+++ b/public/i18n/en_US.json
@@ -219,7 +219,8 @@
             "documentExists": "Document already in context",
             "blockExists": "This content is already in context",
             "addPromptSuccess": "Custom platform added",
-            "deletePromptSuccess": "Platform deleted"
+            "deletePromptSuccess": "Platform deleted",
+            "saveSessionSuccess": "Session saved"
         },
         "confirm": {
             "clearChat": {
