🎨改进模型预设，temperatue要添加一个checkbox，选择是否开启调整，如果关闭，则不应用预设的temperature值

--- a/i18n/en_US.json
+++ b/i18n/en_US.json
@@ -204,6 +204,7 @@
             "contextCountHint": "Controls the number of messages included in conversation history",
             "temperature": "Temperature",
             "temperatureHint": "Controls randomness of generated text, higher value means more random",
+            "enableTemperature": "Enable Temperature Adjustment",
             "systemPrompt": "Temporary System Prompt",
             "systemPromptPlaceholder": "Enter temporary system prompt (leave empty to use global settings)",
             "systemPromptHint": "Only effective in current session",
