--- a/i18n/zh_CN.json
+++ b/i18n/zh_CN.json
@@ -202,7 +202,8 @@
             "contextCount": "上下文消息数",
             "contextCountHint": "控制对话历史中包含的消息数量",
             "temperature": "Temperature",
-            "temperatureHint": "控制生成文本的随机性，值越高越随机",
+            "temperatureHint": "控制生成文本的随机性,值越高越随机",
+            "enableTemperature": "启用 Temperature 调整",
             "systemPrompt": "临时系统提示词",
             "systemPromptPlaceholder": "输入临时系统提示词(留空使用全局设置)",
             "systemPromptHint": "仅在当前会话中生效",
