🎨 多选模型：一个模型支持多次选择

--- a/i18n/en_US.json
+++ b/i18n/en_US.json
@@ -561,6 +561,8 @@
         "enabled": "Multi-Model",
         "enable": "Enable Multi-Model",
         "selectModels": "Select Multiple Models",
+        "searchModels": "Search models",
+        "noResults": "No matching results",
         "selectAll": "Select All",
         "deselectAll": "Deselect All",
         "selected": "Selected",
