--- a/i18n/zh_CN.json
+++ b/i18n/zh_CN.json
@@ -452,6 +452,7 @@
             "moonshot": "月之暗面 (Kimi)",
             "openai": "OpenAI",
             "volcano": "火山引擎",
+            "zhipu": "智谱AI",
             "Achuan": "A API",
             "AchuanDescription": "为您提供稳定可靠的Openai ChatGPT、Gemini、Claude、Deepseek、Grok等API直连中转服务，支持nanobanana生图模型（gemini-3-pro-image-preview）。人民币:美刀=0.6:1，注册即送$0.2试用额度。"
         },
